--- a/website/blog/Frontend/styles.css
+++ b/website/blog/Frontend/styles.css
@@ -6,15 +6,16 @@ body {
   width: 100%;
   height: 100%;
   font-family: "Playfair Display", serif;
+  overflow-x: hidden;
 }
-body {
-  display: grid;
-  grid-template-columns: 20vw 60vw 5vw;
-  grid-gap: 1vw 2vw;
+p {
+  hyphens: auto;
 }
+/* --------Header nav ---------*/
 header {
   margin-top: 2vh;
-  position: sticky;
+  position: fixed;
+  padding-left: 1vw;
 }
 header img {
   width: 20vw;
@@ -23,25 +24,32 @@ ul {
   list-style: none;
   font-weight: 600;
   margin-top: 10px;
-  padding: 2px;
+  padding: 0;
   text-align: center;
 }
-li {
+/*------Main Content-------*/
+.content {
+  display: grid;
+  grid-template-columns: 20vw 70vw 1vw;
+  grid-gap: 4vh 4vw;
 }
-
 main {
   margin-top: 13vh;
 }
 article {
 }
+h2 {
+  font-family: "Tangerine", cursive;
+  text-align: justify;
+}
 article img {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 60vw;
+  width: 70vw;
 }
 article p {
-  width: 56vw;
+  width: 66vw;
   text-align: justify;
   margin-left: auto;
   margin-right: auto;
@@ -59,11 +67,11 @@ hr {
   background-image: linear-gradient(
     to right,
     rgba(0, 0, 0, 0),
-    rgba(228, 226, 226, 0.993),
+    #c3c3c3,
     rgba(0, 0, 0, 0)
   );
 }
-
+/*Form*/
 input[type="text"] {
   width: 20vw;
   background-color: transparent;
@@ -77,3 +85,31 @@ input::placeholder {
 input[placeholder]:focus {
   color: #c3c3c3;
 }
+.button{
+  text-decoration: none;
+  display: inline-block;
+  background-color: transparent;
+  border: 2px solid grey;
+  color:  #c3c3c3;
+  font-family: "Playfair Display", serif;
+  font-weight: 600;
+}
+.button:hover{
+  background-color: grey;
+  color:  black;
+  cursor: pointer;
+}
+a:hover{
+  color: grey;
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+article .button{
+  padding: 4px 6px;
+}
+.more{
+  float: right;
+}
+
+/*footer*/
