--- a/website/blog/templates/blog/base.html
+++ b/website/blog/templates/blog/base.html
@@ -13,44 +13,35 @@
     <div class="content">
     <aside>
     <header>
-        <img src="{% static 'images/logo.png' %}" alt="logo">
+        <a href="{% url 'post_list' %}"><img src="{% static 'images/logo.png' %}"  alt="logo"></a>
             <ul>
-
+                {% if user.is_authenticated %}
+                <li><a href="{% url 'logout' %}">Log out</a>
+                {% else %}
                 <li><a href="{% url 'login' %}">Login </a>
+                {% endif %}
             </li><br>
                 <li><a>Register </a>
             </li><br>
                 <li><a>About us </a>
             </li><br>
-            <li>
-                <form>
-                    <input type="text" placeholder="Username"><br><br>
-                    <input type="text" placeholder="Password"><br><br>
-                    <input type="submit" class="button" value="Submit">
-                    </form>
-            </li>
+            {% if user.is_authenticated %}
+            <li><p>Hello {{ user.username }}</p>
+            </li><br>
+            {% endif %}
         </ul>
     </header>
     </aside>
     <main>
+        <a href="{% url 'post_new' %}"><span>New Post</span></a>
+            <a href="{% url 'post_draft_list' %}"><span>Edit</span></a>
         {% block content %}
             {% endblock %}
     </main>
 </div>
-    <div class="page-header">
-        {% if user.is_authenticated %}
-            <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
-            <a href="{% url 'post_draft_list' %}" class="top-menu"><span class="glyphicon glyphicon-edit"></span></a>
-            <p class="top-menu">Hello {{ user.username }} <small>(<a href="{% url 'logout' %}">Log out</a>)</small></p>
-        {% else %}
-            <a href="{% url 'login' %}" class="top-menu"><span class="glyphicon glyphicon-lock"></span>Log in</a>
-        {% endif %}
-    </div>
-    <div class="content container">
-        <div class="row">
-            <div class="col-md-8">
-            </div>
-        </div>
-    </div>
+<footer>
+    <p>Copyright Andual and Gracrys 2018 </p>
+    <a><img src="{% static 'images/github-logo.png' %}" alt="placeholder+image"></a>
+</footer>
 </body>
 </html>
