--- a/website/blog/static/css/styles.css
+++ b/website/blog/static/css/styles.css
@@ -1,6 +1,6 @@
 body {
   background-image: url("grungebg.jpg");
-  background-size: 100% 100%;
+  background-size: cover;
   color: #d6d6d6;
   margin: 0;
   padding: 0px;
@@ -8,19 +8,33 @@ body {
   height: 100%;
   font-family: "Playfair Display", serif;
   overflow-x: hidden;
-  min-height:100%; 
-    position:relative; 
+      position:absolute; 
+       
+}
+.bg{
+ min-height: 100%;
+  min-width: 100%;
+  width: 100%;
+  height: 100%;
+   margin: 0;
+  padding: 0px;
+  position:  fixed;
+  z-index: -100;
 }
 p {
   hyphens: auto;
 }
 /* --------Header nav ---------*/
-header {
+nav {
   margin-top: 2vh;
   position: fixed;
   padding-left: 1vw;
+  
 }
-header img {
+/*aside{
+background-color: black;
+}*/
+ nav img {
   width: 20vw;
 }
 ul {
@@ -124,12 +138,16 @@ footer{
 position: absolute; 
     left: 0 ; 
     right: 0; 
-    bottom: 0; 
+    bottom: 0px; 
 justify-content: space-between;
 align-items: center;
 padding: 0 20px;
+margin-bottom: -80px;
+margin-top: auto;
 }
 footer a img{
-
   width: 40px;
+}
+footer a img:hover{
+  background-image: url("b-github-logo.png");
 }
