--- a/website/blog/templates/blog/post_list.html
+++ b/website/blog/templates/blog/post_list.html
@@ -10,18 +10,13 @@
         <a rel="#" href="{% url 'post_detail' pk=post.pk %}" class="more"><button type="" class="button">Read More...</button></a>
         <br>
         <hr>
+         {{ post.published_date }}
         </article>
     
-        <div class="post">
-            <div class="date">
-                {{ post.published_date }}
-            </div>
-            <h1>
-                
-            </h1>
-            <p></p>
-            <a href="{% url 'post_detail' pk=post.pk %}">Comments: {{ post.approved_comments.count }}</a>
-        </div>
+        
+            
+            <!--a href="{% url 'post_detail' pk=post.pk %}">Comments: {{ post.approved_comments.count }}</a-->
+       
     {% endfor %}
 {% endblock %}
        
