--- a/website/blog/static/css/styles.css
+++ b/website/blog/static/css/styles.css
@@ -8,33 +8,63 @@ body {
   height: 100%;
   font-family: "Playfair Display", serif;
   overflow-x: hidden;
-      position:absolute; 
-       
+  position: absolute;
+  margin-bottom: 50px;
 }
-.bg{
- min-height: 100%;
+.bg {
+  min-height: 100%;
   min-width: 100%;
   width: 100%;
   height: 100%;
-   margin: 0;
+  margin: 0;
   padding: 0px;
-  position:  fixed;
+  position: fixed;
   z-index: -100;
 }
 p {
   hyphens: auto;
 }
-/* --------Header nav ---------*/
+a {
+  text-decoration: none;
+  display: inline-block;
+  color: #c3c3c3;
+}
+/* --------Menu nav ---------*/
 nav {
   margin-top: 2vh;
   position: fixed;
   padding-left: 1vw;
-  
 }
-/*aside{
-background-color: black;
-}*/
- nav img {
+li input[type="text"] {
+  width: 30px;
+  background-color: transparent;
+  border: none;
+  border-bottom: 2px solid grey;
+  box-sizing: border-box;
+
+  font-size: 16px;
+  background-image: url("magnifier.png");
+  background-size: 20px;
+  background-repeat: no-repeat;
+  background-position: 4px 0px;
+  padding: 4px 12px;
+  color: #f0f0f0;
+  font-family: "Playfair Display", serif;
+  transition: width 0.4s ease-in-out;
+}
+li input[type="text"]:focus {
+  width: 100px;
+  background-image: none;
+}
+li input[type="submit"] {
+  width: 20%;
+  text-decoration: none;
+  display: inline-block;
+  background-color: transparent;
+  border: none;
+}
+
+nav img {
   width: 20vw;
 }
 ul {
@@ -49,15 +79,20 @@ main {
   display: grid;
   grid-template-columns: 20vw 70vw 1vw;
   grid-gap: 4vh 4vw;
+  margin-bottom: 40px;
 }
 article {
   margin-top: 13vh;
 }
-section {
-}
+
 h2 {
   font-family: "Tangerine", cursive;
   text-align: justify;
+  font-size: 1.8em;
+  margin: 0;
+}
+nav h2 {
+  text-align: center;
 }
 section img {
   display: block;
@@ -72,9 +107,6 @@ section p {
   margin-right: auto;
 }
 section a {
-  text-decoration: none;
-  display: inline-block;
-  color: #c3c3c3;
   cursor: pointer;
   word-spacing: 1em;
 }
@@ -90,7 +122,7 @@ hr {
 }
 /*Form*/
 input[type="text"] {
-  width: 20vw;
+  width: 80%;
   background-color: transparent;
   border: none;
   border-bottom: 2px solid grey;
@@ -102,52 +134,84 @@ input::placeholder {
 input[placeholder]:focus {
   color: #c3c3c3;
 }
-.button{
+.button {
   text-decoration: none;
   display: inline-block;
   background-color: transparent;
   border: 2px solid grey;
-  color:  #c3c3c3;
+  color: #c3c3c3;
   font-family: "Playfair Display", serif;
   font-weight: 600;
 }
-.button:hover{
+.button:hover {
   background-color: grey;
-  color:  black;
+  color: black;
   cursor: pointer;
 }
-a:hover{
+a:hover {
   color: grey;
   text-decoration: underline;
   cursor: pointer;
 }
 
-article .button{
+article .button {
   padding: 4px 6px;
 }
-.more{
+.more {
   float: right;
+}
+#login {
+  background: linear-gradient(
+    135deg,
+    #636363 0%,
+    #222222 19%,
+    #636363 82%,
+    #222222 98%
+  );
+  text-align: center;
+  background-color: #222222;
+  width: 160px;
+}
+/*comments*/
+textarea {
+  margin-top: 4px;
+  width: 100%;
+  overflow: hidden;
+  background-color: grey;
+  border: none;
+  border-radius: 2px;
+  padding: 2px;
+  color: #f0f0f0;
+  font-family: "Playfair Display", serif;
 }
 
 /*footer*/
-footer{
+footer {
   display: flex;
-  background: linear-gradient(to bottom, rgba(0,0,0,0) 1%,rgba(0,0,0,0) 2%,#646464 100%);
-  width:auto ;
+  background: linear-gradient(
+    to bottom,
+    rgba(0, 0, 0, 0) 1%,
+    rgba(0, 0, 0, 0) 2%,
+    #646464 100%
+  );
+  width: auto;
   height: 80px;
-position: absolute; 
-    left: 0 ; 
-    right: 0; 
-    bottom: 0px; 
-justify-content: space-between;
-align-items: center;
-padding: 0 20px;
-margin-bottom: -80px;
-margin-top: auto;
+
+  justify-content: space-between;
+  align-items: center;
+  clear: both;
+  position: relative;
+
+  margin-top: -3em;
+
+  right: 0;
+  bottom: 0;
+  left: 0;
+  padding: 1rem;
 }
-footer a img{
+footer a img {
   width: 40px;
 }
-footer a img:hover{
+footer a img:hover {
   background-image: url("b-github-logo.png");
 }
