--- a/website/blog/templates/blog/base.html
+++ b/website/blog/templates/blog/base.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html>
 {% load static %}
 <head>
@@ -8,42 +7,97 @@
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display|Tangerine" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js" >
     </script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.js">
+</script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.css" />
+<script src="https://unpkg.com/infinite-scroll@3/dist/infinite-scroll.pkgd.js">
+</script>
 </head>
 <body>
+    <img src="{% static 'images/grungebg.jpg' %}" class="bg" alt="bg">
     <main>
     <aside>
+    {% if user.is_authenticated %}
     <nav>
-        <a href="{% url 'post_list' %}"><img src="{% static 'images/logo.png' %}"  alt="logo"></a>
+        <img src="{% static 'images/logo.png' %}" href="{% url 'post_list' %}" alt="logo">
             <ul>
-                {% if user.is_authenticated %}
-                <li><a href="{% url 'logout' %}">Log out</a>
-                {% else %}
-                <li><a href="{% url 'login' %}">Login </a>
-                {% endif %}
+
+                <li><p><h2>Welcome</h2> {{ user.username }}</p>
+            </li>
+            <li><a href="{% url 'post_new' %}">Make Post </a>
+            </li><br>
+            <li><a href="{% url 'post_draft_list' %}">Drafts </a>
+            </li><br>
+            <li><a href="{% url 'logout' %}">Logout </a>
+            </li><br>
+            <li>
+                <form>
+                    <input type="text"><br>
+                <input type="submit" value=" ">
+            
+                </form>
+            </li>
+        </ul>
+    </nav>
+    {% else %}
+    <nav>
+        <img src="{% static 'images/logo.png' %}" href="{% url 'post_list' %}" alt="logo">
+            <ul>
+
+                <li><a href="{% url 'login' %}" rel="modal:open">Login </a>
             </li><br>
                 <li><a>Register </a>
             </li><br>
                 <li><a>About us </a>
             </li><br>
-            {% if user.is_authenticated %}
-            <li><p>Hello {{ user.username }}</p>
-            </li><br>
-            {% endif %}
+            <li>
+                <form>
+                    <input type="text"><br>
+                <input type="submit" value=" ">
+            
+                </form>
+            </li>
         </ul>
     </nav>
+    {% endif %}
     </aside>
     <article>
-    <section>
-        <a href="{% url 'post_new' %}"><span>New Post</span></a>
-            <a href="{% url 'post_draft_list' %}"><span>Edit</span></a>
         {% block content %}
-            {% endblock %}
-    </section>
+        {% endblock %}
     </article>
+    
 </main>
+<!--div id="login" class="modal">
+    {% if form.errors %}
+        <p>Your username and password didn't match. Please try again.</p>
+    {% endif %}
+    <form method="post" action="{% url 'login' %}">
+        <p>Login </p><br>
+        {% csrf_token %}
+        <table>
+        <tr>
+            <td>{{ form.username.label_tag }}</td>
+            <td>{{ form.username }}</td>
+        </tr>
+        <tr>
+            <td>{{ form.password.label_tag }}</td>
+            <td>{{ form.password }}</td>
+        </tr>
+        </table>
+        <--input type="text" placeholder="Username" required=""><br><br>
+        <input type="text" placeholder="Password" required=""><br><br>
+        <input type="submit" class="button" value="login">
+        <input type="hidden" name="next" value="{{ next }}" />
+                        
+    </form>
+    
+</div-->
 <footer>
     <p>© Andual and Gracrys 2018 </p>
     <a><img src="{% static 'images/github-logo.png' %}" alt="placeholder+image"></a>
 </footer>
 </body>
+<script>
+    
+    </script>
 </html>
