--- a/website/blog/templates/registration/login.html
+++ b/website/blog/templates/registration/login.html
@@ -1,11 +1,11 @@
-{% extends "blog/base.html" %}
+<div>
 
-{% block content %}
     {% if form.errors %}
         <p>Your username and password didn't match. Please try again.</p>
     {% endif %}
+    
 
-    <form method="post" action="{% url 'login' %}">
+<form method="post" action="{% url 'login' %}">
     {% csrf_token %}
         <table>
         <tr>
@@ -21,4 +21,5 @@
         <input type="submit" value="login" />
         <input type="hidden" name="next" value="{{ next }}" />
     </form>
-{% endblock %}
+</div>
+
