--- a/website/blog/templates/blog/base.html
+++ b/website/blog/templates/blog/base.html
@@ -7,11 +7,15 @@
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display|Tangerine" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js" >
     </script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.js">
-</script>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.css" />
-<script src="https://unpkg.com/infinite-scroll@3/dist/infinite-scroll.pkgd.js">
-</script>
+    <script src="{% static 'js/index.js' %}"> </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.js">
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jsrender/0.9.91/jsrender.js">
+    </script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
+    <script src="https://unpkg.com/infinite-scroll@3/dist/infinite-scroll.pkgd.js">
+    </script>
 </head>
 <body>
     <img src="{% static 'images/grungebg.jpg' %}" class="bg" alt="bg">
@@ -19,7 +23,7 @@
     <aside>
     {% if user.is_authenticated %}
     <nav>
-        <img src="{% static 'images/logo.png' %}" href="{% url 'post_list' %}" alt="logo">
+        <a href="{% url 'post_list' %}"><img src="{% static 'images/logo.png' %}" alt="logo"><a>
             <ul>
 
                 <li><p><h2>Welcome</h2> {{ user.username }}</p>
